# freecad_datamanager_workbench

./: .editorconfig  .gitignore  .pymarkdown.json  CMakeLists.txt  LICENSE  README.md  Taskfile.yml  main.py  mkdocs.yml  package.xml  pixi.toml  pyproject.toml  varset_tools.py
.github/: CONTRIBUTING.md  FUNDING.yml
.github/workflows/: docs.yml
Documentation/: README.md
Documentation/Usage/: User-Guide.md
Resources/Documents/: Overview.md
datamanager_wb/: MANIFEST.in  README.md  pixi.toml  pyproject.toml  setup.py
datamanager_wb/docs/: commands.md
datamanager_wb/freecad/datamanager_wb/: commands.py  document_model.py  expression_item.py  freecad_version_check.py  gui_selection.py  init_gui.py  main_panel.py  my_numpy_function.py  panel_controller.py  parent_child_ref.py  parsing_helpers.py  resources.py  spreadsheet_datasource.py  spreadsheet_mutations.py  spreadsheet_query.py  tab_controller.py  tab_datasource.py  varset_datasource.py  varset_mutations.py  varset_query.py  varset_tools.py  version.py  workbench.py
datamanager_wb/freecad/datamanager_wb/resources/translations/: README.md  update_translation.sh
datamanager_wb/freecad/datamanager_wb/resources/ui/: main_panel.ui
docs/: HISTORICAL_README.md  architecture.md  development.md  gen_ref_pages.py  index.md  install.md  tests.md  user-guide.md  version_hook.py
freecad/DataManager/: __init__.py  freecad_helpers.py  freecad_version_check.py  init_gui.py  version.py
freecad/DataManager/domain/: __init__.py  parent_child_ref.py
freecad/DataManager/entrypoints/: __init__.py  commands.py  workbench.py
freecad/DataManager/ports/: __init__.py  freecad_context.py  gui_port.py  settings_port.py
freecad/DataManager/resources/translations/: README.md  datamanager_wb_es-ES.ts  update_translation.sh
freecad/DataManager/ui/: main_panel.py  panel_controller.py
freecad/DataManager/varsets/: varset_query.py
freecad/datamanager_wb/: __init__.py  app_port.py  commands.py  document_model.py  expression_item.py  freecad_context.py  freecad_helpers.py  freecad_port.py  freecad_version_check.py  gui_port.py  gui_selection.py  init_gui.py  main_panel.py  main_panel_presenter.py  panel_controller.py  parent_child_ref.py  parsing_helpers.py  resources.py  settings_port.py  spreadsheet_datasource.py  spreadsheet_mutations.py  spreadsheet_query.py  tab_controller.py  tab_datasource.py  varset_datasource.py  varset_mutations.py  varset_query.py  version.py  workbench.py
freecad/datamanager_wb/domain/: __init__.py  expression_item.py  parent_child_ref.py  parsing_helpers.py  tab_controller.py  tab_datasource.py
freecad/datamanager_wb/entrypoints/: __init__.py  commands.py  init_gui.py  workbench.py
freecad/datamanager_wb/ports/: __init__.py  app_port.py  freecad_context.py  freecad_port.py
freecad/datamanager_wb/resources/ui/: main_panel.ui
freecad/datamanager_wb/spreadsheets/: __init__.py  spreadsheet_datasource.py  spreadsheet_mutations.py  spreadsheet_query.py
freecad/datamanager_wb/ui/: __init__.py  gui_selection.py  main_panel.py  main_panel_presenter.py  panel_controller.py
freecad/datamanager_wb/varsets/: __init__.py  varset_datasource.py  varset_mutations.py  varset_query.py
scripts/: addon-ready.json  addon-ready.py  check_docstrs.py  dev-metrics.py  generate_test_docs.py  project-ready.py  qtmarkdown.py
scripts/tests/: test_addon_ready.py
scripts/tests/fixtures/: components-invalid-checker-type.json  components-invalid-content-list.json  components-invalid-content-type.json  components-invalid-entry.json  components-invalid-path-type.json  components-invalid-required-type.json  components-invalid-root.json  components-invalid-unknown-checker.json  components-valid.json
taskfiles/: Taskfile-docs.yml  Taskfile-env.yml  Taskfile-format.yml  Taskfile-lint.yml  Taskfile-metrics.yml  Taskfile-test.yml
tests/: conftest.py
tests/freecad/: create_varset.py  varset_test.FCStd
tests/unit/: test_main_panel_presenter.py  test_parsing_helpers.py  test_spreadsheet_datasource.py  test_spreadsheet_query.py  test_tab_controller.py  test_varset_datasource.py  test_version.py
